--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base64-url": "^2.3.3",
     "express": "^4.17.1",
     "io": "^1.0.1",
+    "minimist": "^1.2.5",
+    "morgan": "^1.10.0",
     "myapp": "0.0.0-1",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0"
